mytrain/mytrain-dev-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-schedule-dp
spec:
  selector:
    matchLabels:
      app: train-schedule
  replicas: 1
  template:
    metadata:
      labels:
        app: train-schedule
    spec:
      containers:
      - name: train-schedule-apps
        image: reg.foobz.com.au/foobz/train-schedule-sc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
