mytrain/mytrain-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: train-schedule-svc
spec:
  #type: LoadBalancer
  #externalTrafficPolicy: Local
  #loadBalancerIP: 10.5.0.32
  ports:
  - port: 8080
  selector:
    app: train-schedule
